<resources>
    <string name="app_name">Best бухгалтер</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_dialog_message">Увесь прогрес буде втрачено.</string>
    <string name="exit_dialog_title">Ви дійсно бажаєте вийти?</string>
    <string name="yes">так</string>
    <string name="no">ні</string>
    <string name="completed_levels">Рівень %d/8</string>
    <string name="answer">Відповісти</string>
    <string name="input_answer">Ввести відповідь</string>
    <string name="first_level_question">Допоможи БетБухгалтеру скласти баланс. Скільки БетБухгалтер має активів?</string>
    <string name="second_level_question">Допоможи БетБухгалтеру скласти баланс. Скільки БетБухгалтер має пасивів?</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="bath">Баня</string>
    <string name="sea">Море</string>
    <string name="bank">Банк</string>
    <string name="business_meeting">Ділова зустріч</string>
    <string name="second_to_third_level_story">Активи=Пасиви\n\nВітаємо! Ти правильно склав баланс!</string>
    <string name="third_level_start_story">Тепер допоможи БетБухгалтеру знайти директора і підписати баланс!\nВгадай, де знаходиться директор?</string>
    <string name="сontinue">Продовжити</string>
    <string name="fourth_level_question">Тепер Баланс заповнений і підписаний! Його потрібно залишити в сейфі.\n\nПідбери код до сейфу.</string>
    <string name="administration">Адміністрація</string>
    <string name="tax">Податкова</string>
    <string name="fond">Пенційний фонд</string>
    <string name="choose_right_answer">Обери правильну відповідь:</string>
    <string name="director_found">Вітаємо! Ти знайшов директора.</string>
    <string name="director_not_found">На жаль, ти не знайшов директора. Cпробуй в іншому місці</string>
    <string name="one_wrong_statement_task_text">Серед цих фактів два є правдивими, а третій – ні. Виберіть твердження, яке є неправдою :</string>
    <string name="help_betaccountant_reach_tax_office">Допоможи БетБухгалтеру швидше дістатись до податкової !</string>
    <string name="balance_not_submitted">На жаль, баланс не здано :(\nСпобуй ще раз</string>
    <string name="facts_about_money_question">Цікаві факти про гроші: правда чи ні? Обирай три правильні відповіді:</string>
    <string name="choose_only_three_facts">Потрібно вибрати 3 факти!</string>
    <string name="go_to_tax">Прямуємо до податкової!</string>
    <string name="say_password_for_duty">Скажи слово-пароль черговому на вході до податкової.</string>
    <string name="seventh_level_task">. . . — документ, що засвідчує права власності на винахід чи технологію.\n. . . – ресурси підприємства, які використовуються для отримання доходів.\n. . . – залишок на рахунку.\n. . . – джерела утворення активів.\n. . . — володіння й користування майном на договірних засадах.\n. . . – це  перевірка діяльності підприємства для встановлення законності, доцільності й ефективності дій.\n. . . — економічна діяльність, суб\'єкти якої уникають офіційного обліку і сплати податків.</string>
    <string name="pass_word_contains">Слово-пароль складається з перших букв термінів які необхідно дібрати до визначень.</string>
    <string name="eighth_level_question">В який кабінет потрібно здавати Баланс?</string>
    <string name="guess_dialog_info">На жаль, це не правильний кабінет (\nЩоб спробувати ще раз, відгадай бухгалтерський термін</string>
    <string name="mission_complete">"Вітаємо!!!\nБаланс потрапив за призначенням!\n\nМісію виконано! "</string>
    <string name="finish_game">Завершити гру</string>
    <string name="kafedra_boo_uabs"><u>kafedra_boo_uabs</u></string>
    <string name="facebook_link"><u>buchuchet.uabs.sumdu</u></string>
    <string name="site_link"><u>http://buchuchet.uabs.sumdu.edu.ua</u></string>
    <string name="phone_number"><u>0996674401</u></string>
    <string name="email_link"><u>boa@uabs.sumdu.edu.ua</u></string>
    <string name="location_link"><u>м. Суми, вул Петропавлівська, 57</u></string>
    <string name="result">Результат:</string>
    <string name="make_screenshot">*зроби знімок екрану з таймером</string>
    <string name="restart">Рестарт</string>
    <string name="complete">Завершити</string>
    <string name="rules">Вітаємо тебе, друже!\nДопоможи Бухгалтеру виконати місію – здати баланс!\nТи маєш три життя, які можуть бути використані на 3 і 5 рівнях на випадок невірної відповіді. На інших рівнях вірна відповідь – єдиний можливий варіант переходу на наступні рівні.  В кінці гри потрібно зробити знімок останнього екрану з таймером, який відображає кількість хвилин затрачених на гру. Таймер працює в режимі реального часу.</string>
    <string name="continue_numbers_line">Підказка: продовж числовий ряд: 55,44,33\.\.\.</string>
    <string name="first_level_right_answer">Підказка: правильна відповідь 22!</string>
    <string name="remember_actives">Підказка: пригадай, скільки Be$t Бухгалтер має активів?</string>
    <string name="second_level_right_answer">Підказка: правильна відповідь 22!</string>
    <string name="wrong_answer">Це неправильна відповідь, спробуй ще раз!</string>
    <string name="third_level_task">Щоб перевірити, чи є тут директор, дай відповідь на коротке запитання! Будь уважний, неправильна відповідь забирає життя!</string>
    <string name="fifth_level_task">Щоб дізнатися куди здавати баланс, дай відповідь на коротке запитання! Будь уважний, неправильна відповідь забирає життя!</string>
    <string name="fifth_level_start_story">Куди Be$t Бухгалтеру здавати Баланс?</string>
    <string name="third_level_wrong_answer">Продовжуй підбирати код!</string>
    <string name="quest_developer">Розробник квесту: Кафедра бухгалтерського обліку та оподаткування УАБС СумДУ</string>

    <string-array name="terms">
        <item>Капітал</item>
        <item>Статут</item>
        <item>Сальдо</item>
        <item>Рахунок</item>
        <item>Кредит</item>
    </string-array>

    <string-array name="third_level_questions">
        <item>Третина населення землі живе менш ніж на 2 долари в день?</item>
        <item>У 2020 р. Україна повністю відмовилася від імпорту нафти й газу?</item>
        <item>З 10 найдорожчих за капіталізацією компаній у світі 8 – з Америки?</item>
        <item>Усі держави, що входять до Європейського Союзу, зобов’язані використовувати євро в якості національної валюти?</item>
    </string-array>
    <string-array name="third_level_answers">
        <item>так</item>
        <item>ні</item>
        <item>так</item>
        <item>ні</item>
    </string-array>

    <string-array name="fifth_level_first_facts_list">
        <item>Вперше податок на доходи запровадила Велика Британія 1799 року.</item>
        <item>У багатьох країнах зараз справляється податок на собак.</item>
        <item>В Україні підприємства можуть не сплачувати податки у перші 5 років своєї діяльності.</item>
    </string-array>
    <string-array name="fifth_level_second_facts_list">
        <item>У 1689 р. Петром І у Росії був запроваджений податок на бороду.</item>
        <item>В Україні з 2000 р. діє податок на годинники.</item>
        <item>Українець може зменшити суму сплачених податків, якщо оплачує своє навчання в закладах вищої освіти.</item>
    </string-array>
    <string-array name="fifth_level_third_facts_list">
        <item>На Балеарських островах в Іспанії діє податок на сонце.</item>
        <item>Середньостатистичний українець сплачує в якості податків більше 40% заробітної плати.</item>
        <item>За часів Київської Русі податки можна було сплачувати як у грошовому, так і в натуральному вигляді (хутром, зерном тощо).</item>
    </string-array>
    <string-array name="fifth_level_fourth_facts_list">
        <item>У 1783 р. у Великій Британії було запроваджено податок на капелюхи.</item>
        <item>При заповненні податкової декларації в Україні людина обов’язково має вказати свій індивідуальний податковий номер.</item>
        <item>У Німеччині кожен громадянин може безкоштовно звернутись до податкового консультанта.</item>
    </string-array>
    <string-array name="fifth_level_answers">
        <item>3</item>
        <item>2</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>