<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".fragment.ThirdLevel">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/fifth_level_task"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/administrationContainer"
            style="@style/thirdFifthLevelItemsStyle">

            <ImageView
                style="@style/thirdFifthLevelItemImageStyle"
                android:src="@drawable/administration" />

            <TextView
                style="@style/thirdFifthLevelItemTextStyle"
                android:text="@string/administration" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bankBalanceContainer"
            style="@style/thirdFifthLevelItemsStyle">

            <ImageView
                style="@style/thirdFifthLevelItemImageStyle"
                android:src="@drawable/bank" />

            <TextView
                style="@style/thirdFifthLevelItemTextStyle"
                android:text="@string/bank" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/taxContainer"
            style="@style/thirdFifthLevelItemsStyle">

            <ImageView
                style="@style/thirdFifthLevelItemImageStyle"
                android:src="@drawable/tax" />

            <TextView
                style="@style/thirdFifthLevelItemTextStyle"
                android:text="@string/tax" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/shopContainer"
            style="@style/thirdFifthLevelItemsStyle">

            <ImageView
                style="@style/thirdFifthLevelItemImageStyle"
                android:src="@drawable/fond" />

            <TextView
                style="@style/thirdFifthLevelItemTextStyle"
                android:text="@string/fond" />

        </LinearLayout>

    </GridLayout>
</FrameLayout>