<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".fragment.ThirdLevel">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/third_level_task"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/bathContainer"
            style="@style/thirdFifthLevelItemsStyle">

            <ImageView
                style="@style/thirdFifthLevelItemImageStyle"
                android:src="@drawable/bath" />

            <TextView
                style="@style/thirdFifthLevelItemTextStyle"
                android:text="@string/bath" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/seaContainer"
            style="@style/thirdFifthLevelItemsStyle">

            <ImageView
                style="@style/thirdFifthLevelItemImageStyle"
                android:src="@drawable/sea" />

            <TextView
                style="@style/thirdFifthLevelItemTextStyle"
                android:text="@string/sea" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bankContainer"
            style="@style/thirdFifthLevelItemsStyle">

            <ImageView
                style="@style/thirdFifthLevelItemImageStyle"
                android:src="@drawable/bank" />

            <TextView
                style="@style/thirdFifthLevelItemTextStyle"
                android:text="@string/bank" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/businessMeetingContainer"
            style="@style/thirdFifthLevelItemsStyle">

            <ImageView
                style="@style/thirdFifthLevelItemImageStyle"
                android:src="@drawable/business_meeting" />

            <TextView
                style="@style/thirdFifthLevelItemTextStyle"
                android:text="@string/business_meeting" />

        </LinearLayout>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>