<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/guess_dialog_info"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/guessTermDialogTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:translationZ="1dp"
            android:textAllCaps="true"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/key" />
    </FrameLayout>

    <EditText
        android:id="@+id/answerTermInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_answer"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="@dimen/sp_20"/>


    <Button
        android:id="@+id/guessTermAnswerBtn"
        style="@style/baseButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/answer_button_background"
        android:text="@string/answer" />
</LinearLayout>